--- a/roles/node_install/templates/kubelet.service.j2
+++ b/roles/node_install/templates/kubelet.service.j2
@@ -23,7 +23,8 @@ ExecStart=/usr/local/bin/kubelet \
   --runtime-request-timeout=15m \
   --tls-cert-file=/var/lib/kubelet/{{ inventory_hostname }}.pem \
   --tls-private-key-file=/var/lib/kubelet/{{ inventory_hostname }}-key.pem \
-  --v=2
+  --v=2 \
+  --fail-swap-on="false"
 Restart=on-failure
 RestartSec=5
 
